# arch-cli

./: .env  .gitignore  Cargo.toml  README.md  arch-docker-compose.yml  bitcoin-docker-compose.yml  bootnode.sh  btc-rpc-explorer.dockerfile  config.default.toml  config.toml  demo-docker-compose.yml  init.sh  install.sh  leader.sh  start-server.sh  validator.sh
.github/workflows/: release.yml
arch-indexer/: Dockerfile  docker-compose.yml  init.sql  package-lock.json  package.json
arch-indexer/src/: index.js
bip322/: Cargo.toml
program/: Cargo.toml
program/src/: atomic_u64.rs  entrypoint.rs  helper.rs  instruction.rs  lib.rs  program.rs  program_error.rs  pubkey.rs  system_instruction.rs
program/src/stable_layout/: stable_ins.rs
program/src/syscalls/: definitions.rs
src/: docker_manager.rs  lib.rs  main.rs
src/app/: demo-docker-compose.yml
src/app/backend/: Dockerfile  package.json  server.js
src/app/frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts
src/app/frontend/public/: site.webmanifest
src/app/frontend/src/: App.tsx  main.jsx
src/app/frontend/src/components/: BlockDetailsPage.tsx  BlockList.tsx  CreateArchAccount.tsx  ErrorMessage.tsx  GraffitiWall.tsx  SearchBar.tsx  SearchResultPage.tsx  TransactionDetailsPage.tsx  TransactionHistoryPage.tsx
src/app/frontend/src/utils/: bitcoinHelpers.ts  cryptoHelpers.ts
src/app/program/: Cargo.toml
src/app/program/src/: lib.rs
src/common/: Cargo.toml
src/common/src/: constants.rs  helper.rs  lib.rs  models.rs  processed_transaction.rs  runtime_transaction.rs  wallet_manager.rs
src/demo/: build.rs  gcp.rs  mod.rs  setup.rs
src/program/src/: message.rs  program.rs  pubkey.rs
src/templates/: Cargo.toml  backend_index.ts  frontend_index.html  frontend_index.js  frontend_package.json  program_cargo.toml  program_lib.rs
templates/: arch-docker-compose.yml  config.default.toml  init.sh  lib.rs  program_cargo.toml  server-docker-compose.yml  validator.sh
templates/bip322/: Cargo.toml
templates/bip322/src/: lib.rs
templates/common/src/: helper.rs  models.rs
templates/demo/: Dockerfile
templates/demo/app/: Dockerfile.cloudrun  demo-docker-compose.yml  nginx.conf
templates/demo/app/backend/: .env.example  package-lock.json  package.json
templates/demo/app/frontend/: .env.example  .gitignore  Dockerfile  healthcheck.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.js
templates/demo/app/frontend/src/: App.tsx  index.css
templates/demo/app/frontend/src/components/: ConnectWalletModal.tsx  GraffitiWall.tsx  GraffitiWallComponent.tsx  SearchResultPage.tsx  TransactionHistoryPage.tsx
templates/demo/app/frontend/src/hooks/: useWallet.ts
templates/demo/app/frontend/src/lib/: utils.ts
templates/demo/app/frontend/src/services/: bitcoinService.ts
templates/demo/app/frontend/src/utils/: bitcoinHelpers.ts  cryptoHelpers.ts
templates/demo/app/program/: Cargo.toml
templates/demo/app/program/src/: lib.rs
templates/demo/bip322/src/: error.rs
templates/demo/common/: Cargo.toml
templates/demo/common/src/: constants.rs  helper.rs  models.rs
templates/demo/program/: Cargo.toml
templates/demo/program/src/: message.rs
templates/program/: Cargo.toml
templates/program/src/: clock.rs  entrypoint.rs  instruction.rs  lib.rs  message.rs  program.rs  program_stubs.rs  pubkey.rs  system_instruction.rs  transaction_to_sign.rs
templates/program/src/syscalls/: definitions.rs
templates/sample/app/program/: Cargo.toml
templates/sample/app/program/src/: lib.rs
templates/sample/common/: Cargo.toml
templates/sample/common/src/: helper.rs  signature.rs  transaction_to_sign.rs  wallet_manager.rs
templates/sample/program/src/: account.rs  instruction.rs  log.rs  program.rs  utxo.rs
