[package]
name = "arch-cli"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "3.2", features = ["derive"] }
anyhow = "1.0.78"
bitcoin = "0.31.0"
tokio = { version = "1.x", features = ["rt-multi-thread", "macros"] }
hex = { version = "0.4.3", default-features = false }
memoffset = "0.9.1"
rustversion = "1.0.17"
serde = { version = "1.0.162", default-features = false, features = ["derive"] }
thiserror = "1.0.42"
borsh = { version = "1.4.0", features = ["derive"] }
secp256k1 = { version = "0.28.2", features = ["global-context"] }
common = { path = "./src/common" }

[lib]
path = "src/main.rs"