[package]
name = "arch-cli"
version = "0.1.5"
edition = "2021"
include = [
  "src/**/*",
  "templates/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE",
]
description = "Arch Network CLI - A tool for managing Arch Network applications"
authors = ["Arch Network <brian@arch.network>"]
license = "MIT"
repository = "https://github.com/Arch-Network/arch-cli"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
anyhow = "1.0.78"
bitcoin = "0.32.4"
bip322 = { path = "./templates/bip322" }
tokio = { version = "1.x", features = ["rt-multi-thread", "macros", "process"] }
hex = { version = "0.4.3", default-features = false }
memoffset = "0.9.1"
rustversion = "1.0.17"
serde = { version = "1.0.162", default-features = false, features = ["derive"] }
thiserror = "1.0.42"
borsh = { version = "1.4.0", features = ["derive"] }
secp256k1 = { version = "0.29.1", features = ["global-context", "rand-std"] }
common = { path = "./templates/common" }
bitcoincore-rpc = "0.19.0"
colored = "2.0"
config = "0.13"
arch_program = { path = "./templates/program" }
dotenv = "0.15.0"
reqwest = "0.12.5"
webbrowser = "1.0.2"
dirs = "5.0.1"
serde_json = "1.0.102"
rand = "0.8"
shellexpand = "3.1.0"
toml_edit = "0.22.22"
dialoguer = "0.10.1"
indicatif = "0.17.7"
include_dir = "0.7.3"
regex = "1.11.1"
tempfile = "3.14.0"
